--- a/plugin.yml
+++ b/plugin.yml
@@ -1,11 +1,11 @@
-name: PureEntitiesX
+name: EntitiesPM+
 main: revivalpmmp\pureentities\PureEntities
-version: 0.4.0
+version: 0.2.1
 api: [3.0.0-ALPHA11]
 
 load: STARTUP
-authors: ["milk0417", "RevivalPMMP"]
-description: Implement all MCPE entities into your worlds
+authors: ["milk0417", "RevivalPMMP", "ProgramSanctuary"]
+description: Brings back all your favourite entities.
 website: https://github.com/RevivalPMMP/PureEntitiesX
 
 commands:
